Fix text-align in Hallway component

--- a/styles/components/Hallway.module.scss
+++ b/styles/components/Hallway.module.scss
@@ -18,6 +18,7 @@
     h2 {
       opacity: 100%;
       transition: opacity 0.1s ease;
+      text-align: center;
     }
   }
   
